test/files/neg/t4871.check
t4871.scala:6: error: this type parameter must be specified
    val z: Class[C] = classOf
                      ^
one error found
